--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -269,7 +269,7 @@
   </div>
 
   <script>
-    var websocketurl = "wss://" + "{{.WebSocketUrl}}" + "/ws/notification"
+    var websocketurl = "ws://" + "{{.WebSocketUrl}}" + "/ws/notification"
     //alert(websocketurl)
   </script>
   <script type="text/javascript" src='https://cdn.plot.ly/plotly-2.24.1.min.js'></script>
