--- a/ui/html/pages/rpg_param_ds_add.tmpl
+++ b/ui/html/pages/rpg_param_ds_add.tmpl
@@ -11,7 +11,14 @@ Add
                 <p class="h5">
                     {{if .Form.ID}} Edit {{else}} Add {{end}} Program Datastructure
 
-
+     {{if .Form.ID}} 
+                    <a class="btn btn-ghost-danger float-right"   hx-push-url="true" 
+                     data-toggle="tooltip" data-placement="bottom" title="Delete" 
+                     href='/pgmfields/delete/{{.Form.ID}}'  >   
+                      <svg class="c-icon mfe-2">
+                      <use xlink:href="/static/coreui/vendors/coreui/icons/svg/free.svg#cil-trash"></use>
+                  </svg></a>
+                    {{end}}
                 </p>
             </div>
             <div class="card-body">
