--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -122,6 +122,14 @@
       </li>
     
 
+      <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="/pgmfields">
+        <svg class="c-icon mfe-2">
+          <use xlink:href="/static/coreui/vendors/coreui/icons/svg/free.svg#cil-list-numbered"></use>
+      </svg>Program Fields</a>
+      </li>
+
+
+ 
    
  
     
