--- a/ui/html/pages/endpoint_add.tmpl
+++ b/ui/html/pages/endpoint_add.tmpl
@@ -5,7 +5,7 @@ Add
 
 {{define "content"}}
 <div class="row p-2">
-    <div class="col-4 " id="spaddcol">
+    <div class="col-4 " id="epaddcol">
         <div class="card " id="spaddcard" style="height: 100%;">
            
             <div class="card-body">
