--- a/ui/html/pages/sp_add.tmpl
+++ b/ui/html/pages/sp_add.tmpl
@@ -13,7 +13,7 @@ Add
 
                     <a id="searchbtn" 
                     data-toggle="tooltip" data-placement="bottom" title="Search stored procedure" 
-                    hx-get="/sp/find" hx-select="#spfindcard" hx-target="#searchsparea" class="btn btn-ghost-info float-right"  >
+                    hx-get="/sp/find" hx-select="#spfindcard" hx-target="#searchsparea" class="btn btn-info float-right"  >
                         <svg class="c-icon mfe-2">
                             <use xlink:href="/static/coreui/vendors/coreui/icons/svg/free.svg#cil-search"></use>
                         </svg>
