--- a/ui/html/partials/serveroptions.tmpl
+++ b/ui/html/partials/serveroptions.tmpl
@@ -30,7 +30,7 @@
   <a class="c-sidebar-nav-link" href='/servers/clearcache/{{.Server.ID}}'>
     <svg class="c-icon mfe-2">
       <use xlink:href="/static/coreui/vendors/coreui/icons/svg/free.svg#cil-reload"></use>
-    </svg>Invalidate Cache</a>
+    </svg>Refresh</a>
 </li>
 
 
